--- a/package.json
+++ b/package.json
@@ -76,11 +76,17 @@
 		]
 	},
 	"dependencies": {
-		"bootstrap": "^4.3.1",
+		"bootstrap": "^4.6.0",
+		"cloudinary-react": "^1.7.0",
+		"emailjs-com": "^2.6.4",
+		"formik": "^2.2.6",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
+		"react-bootstrap": "^1.5.2",
 		"react-dom": "^16.8.4",
+		"react-places-autocomplete": "^7.3.0",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"sweetalert2": "^10.16.7"
 	}
 }
